clusters/homelab/apps/keycloak/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db
  namespace: keycloak
spec:
  selector:
    app: keycloak-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
